--- a/src/Components/LoginSignup/LoginSignup.css
+++ b/src/Components/LoginSignup/LoginSignup.css
@@ -1,14 +1,38 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
+}
+
 .container {
     display: flex;
     flex-direction: column;
     margin: auto;
-    margin-top: 200px;
+    margin-top: 3%;
+    margin-bottom: 4%;
     background: #FFFED3;
     padding-bottom: 30px;
-    width: 35.5rem;
+    width: 31.5rem;
     /* 600px */
     border: #4C3BCF;
     border-radius: 5%;
+    /* overflow: hidden; */
+}
+
+body {
+    height: 100%;
+    /* min-height: 100vh; */
+
+}
+
+.errors {
+    color: gray;
+    background-color: #FFADB0;
+    background-size: content;
+    background-position: center;
+    margin: auto;
+    border-radius: 6%;
 }
 
 .header {
@@ -68,10 +92,11 @@
     /* 19px */
 }
 
-.create-account {
-    padding-left: 0px;
-    font-size: 13px;
-    margin-top: 0px;
+.forgot-password.create-account {
+    padding: auto;
+    font-size: 15px;
+    margin: auto;
+    margin-left: 0px;
 }
 
 .forgot-password {
@@ -84,12 +109,14 @@
 .forgot-password span {
     color: #4C00B4;
     cursor: pointer;
+    font-size: 1rem;
 }
 
 .submit-container {
     display: flex;
-    gap: 30px;
-    margin: 60px auto;
+    gap: 1rem;
+    flex-direction: column;
+    margin: 2rem auto 0.3rem;
 }
 
 .submit {
@@ -109,4 +136,11 @@
 .gray {
     background: #EAEAEA;
     color: #676767;
+}
+
+img.back {
+    width: 7%;
+    /* margin-left: 2r; */
+    margin: auto 2rem auto;
+    padding-bottom: 0%;
 }
